--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/blog.cshtml
@@ -4,15 +4,30 @@
     Page.Title = "Blog General - Brokolee Software";
 }
 
+<style>
+    .caja{
+        box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.2);
+    padding: 10px;
+    margin-top: 30px;
+    background-color: #fff;
+    }
 
-<link rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    .fecha span {
+    float: right;
+    font-size: 16px;
+    color: cornflowerblue;
+}
+</style>
+
+
 
 <link rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
-<link href="~/assets/css/blog.css" rel="stylesheet" />
+@*
+<link rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link href="~/assets/css/blog.css" rel="stylesheet" />
+*@
 
 
 
@@ -69,61 +84,9 @@
     </div><!-- container -->
     <!-- end back button -->
     <!-- end page title end breadcrumb -->
-    @foreach (var item in Model.blogList)
-
-    {
-        <div class="Container">
-
-            <div class="row">
-                <div class="col-sm-12">
-
-                    <div class="single-blog">
-                        <p class="fecha">
-                            @item.author<span>
-
-                                <td>@Convert.ToDateTime(item.blogdate).ToString("dd/MM/yyyy HH:mm")</td>
-                            </span>
-                        </p>
-
-                        @*<img src="~/Areas/coadmin/img/blog.png" />*@
-
-                        <h2>
-                            <a class="titulo" href="#"> @item.title</a>
-                        </h2>
-                        <p class="blog-text">@item.content</p>
-                        <p>
-                            <a href="" class="">
-
-                                <a href="@Url.Action("editarblog", "comunicaciones", new { area = "webmaster", blogID = item.id })">
-                                    <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                            data-toggle="tooltip" data-placement="top" title="Editar">
-                                        <i class="mdi mdi-lead-pencil"></i>
-                                    </button>
-                                </a>
-                                <a href="@Url.Action("verblog", "comunicaciones", new { blogID = item.id, area = "webmaster" })">
-                                    <button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
-                                            data-toggle="tooltip" data-placement="top" title="Ver">
-                                        <i class="mdi mdi-eye"></i>
-                                    </button>
-                                </a>
-                            </a>
-                            <span>
-                                <i class="fa fa-thumbs-o-up"></i> likes
-                                <i class="fa fa-comment-o"></i> Coments
+    <div id="divContenido"></div>
 
 
-
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-
-
-            </div>
-
-        </div>
-    }
 
 
 
@@ -132,76 +95,112 @@
             <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
         </div>
     </div>
-</div> <!-- Page content Wrapper -->
+</div>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script>
 
 
+    console.log('@Model.Content');
 
+
+                var url = "@Url.Action("ArmarBlogs", "comunicaciones", new { area = "webmaster" })";
+     var compania = new Array();
+    var formData = new FormData();
+
+    formData.append('ID', '@Model.Content');
+
+    compania.push(formData);
+    $.ajax({
+        url: url,
+        type: "post",
+        data: compania[0],
+                success: function (result) {
+                    $("#divContenido").append(result);
+                },
+                processData: false,
+                contentType: false
+            });
+
+    //var content = '';
+    // content += "<div class='Container'><div class='row'><div class='col-sm-12'><div class='single-blog'><p class='fecha'>" + item.author + "<span>";
+    //            content += "<td>" + Convert.ToDateTime(item.blogdate).ToString("dd/MM/yyyy HH:mm") + "</td></span></p><h2><a class='titulo' href='#'>" + item.title + "</a></h2>";
+    //            content += item.content.Replace('"','\'');
+    //            content += "<p><a href='#' ><a href = '" + Url.Action("editarblog", "comunicaciones", new { area = "webmaster", blogID = item.id }).ToString() + "'><button type = 'button' class='btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1'";
+    //            content += "data-toggle='tooltip' data-placement='top' title='Editar'><i class='mdi mdi-lead-pencil'></i></button></a>";
+    //            content += "<a href = '" + Url.Action("verblog", "comunicaciones", new { blogID = item.id, area = "webmaster" }).ToString() + "'>";
+    //            content += "<button type = 'button' class='btn btn-success waves-effect waves-light btn-sm mr-1 mb-1' data-toggle='tooltip' data-placement='top' title='Ver'>";
+    //            content += "<i class='mdi mdi-eye'></i></button></a></a>< span>< i class='fa fa-thumbs - o - up'></i> likes < i class='fa fa-comment-o'></i> Coments</span> </p></div></div></div></div>";
+    //    $("#divContenido").append(cont);
+
+</script>
+
+<!-- Page content Wrapper -->
 @*<div class="row">
-    <div class="col-12">
-        <div class="card">
-            <div class="card-body">
-                <div class="row form-material">
-                    <div class="col-md-6">
-                        <h5 class="d-inline-block">Últimas entradas</h5>
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row form-material">
+                        <div class="col-md-6">
+                            <h5 class="d-inline-block">Últimas entradas</h5>
+                        </div>
+                        <div class="col-md-6 mb-1">
+                            <a href="@Url.Action("agregarblog", "comunicaciones", new { area = "webmaster" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Nueva entrada</button></a>
+                        </div>
                     </div>
-                    <div class="col-md-6 mb-1">
-                        <a href="@Url.Action("agregarblog", "comunicaciones", new { area = "webmaster" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Nueva entrada</button></a>
-                    </div>
-                </div>
-                <div class="table-responsive">
-                    <table id="dataTable-documentos-legales" class="table table-striped table-bordered normal"
-                           style="border-collapse: collapse; border-spacing: 0; width: 100%;">
-                        <thead>
-                            <tr>
-                                <th>Título</th>
-                                <th>Autora</th>
-                                <th>Contenido</th>
-                                <th>Fecha de publicación</th>
-                                <th>Opciones</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model.blogList)
-                            {
+                    <div class="table-responsive">
+                        <table id="dataTable-documentos-legales" class="table table-striped table-bordered normal"
+                               style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                            <thead>
                                 <tr>
-                                    <td>@item.title</td>
-                                    <td>@item.author</td>
-                                    <td>@item.content.</td>
-                                    <td class="text-center">@Convert.ToDateTime(item.blogdate).ToString("MM/dd/yyyy HH:mm")</td>
-                                    <td class="text-center">
-                                        <a href="@Url.Action("verblog", "comunicaciones", new { blogID = item.id, area = "webmaster" })">
-                                            <button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
-                                                    data-toggle="tooltip" data-placement="top" title="Ver">
-                                                <i class="mdi mdi-eye"></i>
-                                            </button>
-                                        </a>
-                                        <a href="#">
-                                            <button type="button" class="btn btn-danger waves-effect waves-light btn-sm mb-1"
-                                                    onclick="onDeleteBlog(this)" data-id="@item.id"
-                                                    data-toggle="tooltip" data-placement="top" title="Eliminar-g">
-                                                <i class="mdi mdi-delete"></i>
-                                            </button>
-
-                                        </a>
-
-                                    </td>
+                                    <th>Título</th>
+                                    <th>Autora</th>
+                                    <th>Contenido</th>
+                                    <th>Fecha de publicación</th>
+                                    <th>Opciones</th>
                                 </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.blogList)
+                                {
+                                    <tr>
+                                        <td>@item.title</td>
+                                        <td>@item.author</td>
+                                        <td>@item.content.</td>
+                                        <td class="text-center">@Convert.ToDateTime(item.blogdate).ToString("MM/dd/yyyy HH:mm")</td>
+                                        <td class="text-center">
+                                            <a href="@Url.Action("verblog", "comunicaciones", new { blogID = item.id, area = "webmaster" })">
+                                                <button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
+                                                        data-toggle="tooltip" data-placement="top" title="Ver">
+                                                    <i class="mdi mdi-eye"></i>
+                                                </button>
+                                            </a>
+                                            <a href="#">
+                                                <button type="button" class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                        onclick="onDeleteBlog(this)" data-id="@item.id"
+                                                        data-toggle="tooltip" data-placement="top" title="Eliminar-g">
+                                                    <i class="mdi mdi-delete"></i>
+                                                </button>
+
+                                            </a>
+
+                                        </td>
+                                    </tr>
 
 
-                            }
-                        </tbody>
-                    </table>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>*@<!-- end row -->
+    </div>*@<!-- end row -->
 <!-- back button -->
 @*<div class="row pb-4">
-    <div class="col-md-6">
-        <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
-    </div>
-</div>*@
+        <div class="col-md-6">
+            <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+        </div>
+    </div>*@
 <!-- end back button -->
 @*</div>*@<!-- container -->
 @*</div>*@ <!-- Page content Wrapper -->
