--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/editarblog.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/editarblog.cshtml
@@ -3,7 +3,11 @@
     ViewBag.Title = "editarblog";
     Page.Title = "Editar blog - Brokolee Software";
 }
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
+<!-- include summernote css/js -->
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-lite.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-lite.min.js"></script>
 <div class="page-content-wrapper">
 
     <div class="container-fluid">
@@ -48,7 +52,7 @@
                     }))
                     {
                         @Html.AntiForgeryToken()
-                        <input type="hidden" name="editID" value="@Model.editBlog.id"/>
+                        <input type="hidden" name="editID" value="@Model.editBlog.id" />
                         <div class="card-body">
                             <h5 class="d-inline-block">Nuevo Blog</h5>
                             <div class="form-divider"></div>
@@ -75,7 +79,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input-3" class="col-sm-3 col-form-label">Contenido</label>
                                 <div class="col-sm-9">
-                                    <textarea class="form-control" name="content" data-toggle="tooltip"
+                                    <textarea class="form-control" name="content" data-toggle="tooltip" id="tbxContenido"
                                               title="Contenido descriptivo del blog">@Model.editBlog.content</textarea>
                                     <small class="form-text text-muted">Contenido descriptivo del blog</small>
                                 </div>
@@ -99,3 +103,8 @@
     </div><!-- container -->
 
 </div> <!-- Page content Wrapper -->
+<script>
+
+    $('#tbxContenido').summernote();
+
+</script>
