--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/verblog.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/verblog.cshtml
@@ -3,7 +3,11 @@
     ViewBag.Title = "verblog";
     Page.Title = "Ver blog - Brokolee Software";
 }
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
+<!-- include summernote css/js -->
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-lite.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-lite.min.js"></script>
 <div class="page-content-wrapper">
     <div class="container-fluid">
         <div class="row">
@@ -56,7 +60,7 @@
                                 <p><i class="mdi mdi-clock text-primary"></i>@Convert.ToDateTime(Model.viewBlog.blogdate).ToString("yyyy-MM-dd HH:mm")</p>
                             </div>
                             <div class="col-md-11 mb-3">
-                                <textarea class="form-control" rows="3" readonly>@Model.viewBlog.content</textarea>
+                                <textarea class="form-control" rows="3" id="tbxContenido" readonly>@Model.viewBlog.content</textarea>
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -106,3 +110,8 @@
         </div>
     </div>
 </div>
+<script>
+
+    $('#tbxContenido').summernote();
+
+</script>
