--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -123,19 +123,25 @@
                     <div class="text-center">
                         <h6>@Model.curUser.first_name1 @Model.curUser.last_name1</h6>
                         @*<a class="text-success" href="#">@Model.communityList<span class="waves-block">@Model.communityApart</span></a>*@
-                    @*<select class="form-control" name="communitySelect">
-                        @foreach (var item in Model.communityList)
-                        {
-                            if (Model.communityID1 == item.id)
-                            {
-                                <option value="@item.id" selected>@item.first_name</option>
-                            }
-                            else
-                            {
-                                <option value="@item.id">@item.first_name</option>
-                            }                          
+                    @if(Model.communityList.Count == 0){
+                           <span class="waves-block">Sin comunidades</span>
                         }
-                    </select>*@
+                        else
+                        {
+                            <select class="form-control selectComunidad" onchange="changeComunidad(this.value)" name="communitySelect">
+                                @foreach (var item in Model.communityList)
+                                {
+                                    if (Model.communityID1 == item.id)
+                                    {
+                                        <option value="@item.id" selected>@item.first_name</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="@item.id">@item.first_name</option>
+                                    }
+                                }
+                            </select>
+                        }
                         <p class="text-primary text-uppercase"><sub><i class="mdi mdi-checkbox-blank-circle"></i> Activo</sub></p>
                     </div>
 
