--- a/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
@@ -80,11 +80,11 @@
                                         <td>
                                             @if (Model.communityID1 == item.id)
                                             {
-                                                <input class="form-control" type="checkbox" value="@item.id" checked />
+                                                <input class="form-control" type="checkbox"  onchange="ChangeCommunity(this)" value="@item.id" checked />
                                             }
                                             else
                                             {
-                                                <input class="form-control" type="checkbox" value="@item.id" />
+                                                <input class="form-control" type="checkbox"  onchange="ChangeCommunity(this)" value="@item.id" />
                                             }
                                         </td>
                                     </tr>
